--- a/index.html
+++ b/index.html
@@ -192,12 +192,7 @@ background: linear-gradient(0deg, rgb(255, 217, 50) 0%, rgba(255, 197, 25, 0.911
                             <h3 class="text-center text-3xl font-bold underline">
                                 BlackRock</h3>
                             <p class="text-center font-semibold" style="text-align: center;">
-                                Barbara Bush, Gary Gensler, Harry Potter, and Knuckles have unexpectedly merged their unique talents and abilities due
-                                to their shared involvement with an extraordinary Exchange-Traded Fund (ETF). The former First Lady's grace and poise,
-                                Gensler's financial acumen, Harry Potter's magical prowess, and Knuckles' unyielding determination have fused together
-                                to navigate the intricacies of this innovative investment vehicle. This unlikely quartet, combining their strengths and
-                                knowledge, embarks on a mission to reshape the ETF landscape, creating a financial wizardry of their own in a world
-                                where finance and magic converge. </p>
+                                BlackRock's spot Bitcoin ETF now listed on Nasdaq trade clearing firm, $BROCK. </p>
                             <img alt="" loading="lazy" width="250" height="100" decoding="async" data-nimg="1"
                                 style="color:transparent"
                           
