twitter link updated

--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@ background: linear-gradient(0deg, rgb(255, 217, 50) 0%, rgba(255, 197, 25, 0.911
                             <div class="flex flex-col items-center justify-center ">
                                 <p class="mt-4 font-sans text-lg font-bold text-white">LINKS</p>
                                 <div class="flex flex-row items-center justify-center gap-4 rounded-lg  p-2">
-                                    <a href="tglink" target="_blank" rel="noreferrer"><img
+                                    <a href="https://t.me/brocktoken" target="_blank" rel="noreferrer"><img
                                             alt="telegram link" loading="lazy" width="50" height="50" decoding="async"
                                             data-nimg="1" style="color:transparent"
-                                            src="/images/telegramLogo.svg" /></a><a href="twitterlink"
+                                            src="/images/telegramLogo.svg" /></a><a href="https://twitter.com/blackrock_erc"
                                         target="_blank" rel="noreferrer"><img alt="twitter link" loading="lazy"
                                             width="50" height="50" decoding="async" data-nimg="1"
                                             style="color:transparent" src="/images/twitterLogo.svg" /></a><a
@@ -210,7 +210,7 @@ background: linear-gradient(0deg, rgb(255, 217, 50) 0%, rgba(255, 197, 25, 0.911
                                     THE CEREMONY. THANK YOU.  <a
                                         href="https://t.co/EzyXkRbW8Y">pic.twitter.com/EzyXkRbW8Y</a></p>— ($ETF)
                                 GaryPotterBushKnuckles69inu (@tickerSOL) <a
-                                    href="twitterlink/status/1686211255005257728?ref_src=twsrc%5Etfw">August
+                                    href="https://twitter.com/blackrock_erc/status/1686211255005257728?ref_src=twsrc%5Etfw">August
                                     1, 2023</a>
                             </blockquote>--> 
                             <script async="" src="https://platform.twitter.com/widgets.js"></script>
