--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@ background: linear-gradient(0deg, rgb(255, 217, 50) 0%, rgba(255, 197, 25, 0.911
                                         copied!</div>
                                     <div class="flex flex-col items-center gap-0 rounded-md bg-black/80  px-8 py-4">
                                         <p class="text-sm font-light">CONTRACT</p>
-                                        <p class="text-lg font-semibold">0x00000000000000000000</p>
+                                        <p class="text-lg font-semibold">0x3b453992553955ef61aa5abe4fabb28dd5b8b265</p>
                                     </div>
                                 </div>
                                 <div class="flex flex-col items-center gap-0 rounded-md bg-black/80  px-8 py-4">
                                     <p class="text-sm font-light">SUPPLY</p><a
-                                        href="https://etherscan.io/address/0x00000000000000000000"
+                                        href="https://etherscan.io/address/0x3b453992553955ef61aa5abe4fabb28dd5b8b265"
                                         target="_blank" rel="noreferrer" class="">
                                         <p class="cursor-pointer text-lg font-semibold underline hover:text-red-500">
                                             LIQUIDITY LOCKED</p>
@@ -130,7 +130,7 @@ background: linear-gradient(0deg, rgb(255, 217, 50) 0%, rgba(255, 197, 25, 0.911
                                 </div>
                                 <div class="flex flex-col items-center gap-0 rounded-md bg-black/80  px-8 py-4">
                                     <p class="text-sm font-light">TAX</p><a
-                                        href="https://app.uncx.network/amm/uni-v2/pair/0x00000000000000000000"
+                                        href="https://app.uncx.network/amm/uni-v2/pair/0x3b453992553955ef61aa5abe4fabb28dd5b8b265"
                                         target="_blank" rel="noreferrer" class="">
                                         <p class="cursor-pointer text-lg font-semibold underline hover:text-red-500">
                                             1 / 1 %</p>
@@ -147,15 +147,15 @@ background: linear-gradient(0deg, rgb(255, 217, 50) 0%, rgba(255, 197, 25, 0.911
                                         target="_blank" rel="noreferrer"><img alt="twitter link" loading="lazy"
                                             width="50" height="50" decoding="async" data-nimg="1"
                                             style="color:transparent" src="/images/twitterLogo.svg" /></a><a
-                                        href="https://etherscan.io/address/0x00000000000000000000"
+                                        href="https://etherscan.io/address/0x3b453992553955ef61aa5abe4fabb28dd5b8b265"
                                         target="_blank" rel="noreferrer"><img alt="etherscan link" loading="lazy"
                                             width="50" height="50" decoding="async" data-nimg="1"
                                             style="color:transparent" src="/images/etherscanLogo.svg" /></a><a
-                                        href="https://app.uniswap.org/#/swap?outputCurrency=0x00000000000000000000"
+                                        href="https://app.uniswap.org/#/swap?outputCurrency=0x3b453992553955ef61aa5abe4fabb28dd5b8b265"
                                         target="_blank" rel="noreferrer"><img alt="uniswap pair link" loading="lazy"
                                             width="50" height="50" decoding="async" data-nimg="1"
                                             style="color:transparent" src="/images/uniswapLogo.svg" /></a><a
-                                        href="chartlink"
+                                        href="https://www.dextools.io/app/en/ether/pair-explorer/0x330b6b889bf2088704fbecf7ca18ef78b8f28956"
                                         target="_blank" rel="noreferrer"><img alt="dextools link" loading="lazy"
                                             width="50" height="50" decoding="async" data-nimg="1"
                                             style="color:transparent" src="/images/dextoolsLogo.svg" /></a>
